<resources>

    <string name="app_name">Custom Demo</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_custom_demo">Custom Demo</string>
    <string name="home">Custom Demo Home</string>
    <string name="date_view">Date View Demo</string>
    <string name="magic_button">Magic Button Demo</string>
    <string name="dfcs">DFCS</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="length_picker">Length Picker Demo</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="area">Area</string>
    <string name="compute">Compute</string>
    <string name="area_format">%1$d sq in</string>
    <string name="custom_view">Custom View Demo</string>

</resources>